--- a/package.json
+++ b/package.json
@@ -1,39 +1,4 @@
 {
-<<<<<<< HEAD
-	"name": "gptutor",
-	"version": "0.0.1",
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
-	},
-	"devDependencies": {
-		"@fontsource/fira-mono": "^4.5.10",
-		"@neoconfetti/svelte": "^1.0.0",
-		"@rollup/plugin-replace": "^5.0.5",
-		"@skeletonlabs/skeleton": "^2.4.0",
-		"@skeletonlabs/tw-plugin": "^0.2.3",
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.20.4",
-		"@types/cookie": "^0.5.1",
-		"@types/node": "^20.8.9",
-		"autoprefixer": "^10.4.16",
-		"postcss": "^8.4.31",
-		"svelte": "^4.0.5",
-		"svelte-check": "^3.4.3",
-		"tailwindcss": "^3.3.5",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^4.4.2"
-	},
-	"type": "module",
-	"dependencies": {
-		"axios": "^1.6.0",
-		"openai": "^4.14.1"
-	}
-=======
   "name": "gptutor",
   "version": "0.0.1",
   "scripts": {
@@ -55,6 +20,7 @@
     "autoprefixer": "^10.4.16",
     "mdsvex": "^0.11.0",
     "postcss": "^8.4.31",
+    "prisma": "^5.5.2",
     "rehype-katex-svelte": "^1.2.0",
     "remark-math": "^2.0.1",
     "svelte": "^4.0.5",
@@ -66,9 +32,13 @@
   },
   "type": "module",
   "dependencies": {
+    "@auth/core": "^0.18.0",
+    "@auth/sveltekit": "^0.3.11",
+    "@lucia-auth/adapter-prisma": "^3.0.2",
+    "@prisma/client": "^5.5.2",
     "@rollup/plugin-replace": "^5.0.5",
     "axios": "^1.6.0",
+    "lucia": "^2.7.2",
     "openai": "^4.14.1"
   }
->>>>>>> efe93bdb22ab27e9e0076a5126f29b1ef325d29c
 }
