--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@lucia-auth/adapter-prisma": "^3.0.2",
     "@prisma/client": "^5.5.2",
     "@rollup/plugin-replace": "^5.0.5",
+    "@sveltejs/adapter-netlify": "^2.0.8",
     "axios": "^1.6.0",
     "lucia": "^2.7.2",
     "openai": "^4.14.1"
